--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 h1,p{
     font-family:"Courier New"
 }
+
+
 .topnav{
+    font-size: 40px;
     display: flex;
+    justify-content: space-evenly;
 }
