--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h1,p{
-    font-family:"Courier New"
+    font-family:"Courier New";
+    color: limegreen;
 }
 
 
@@ -17,4 +18,7 @@ p{
     display: flex;
     justify-content: space-evenly;
     border-style:solid;
+    font-family:"Courier New";
+    color: limegreen;
 }
+
