Reorganized and renamed navs, it will be useful later.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ p{
     font-size:40px
 }
 
-.topnav{
+.horizontalnav{
     font-size: 40px;
     display: flex;
     justify-content: space-evenly;
