--- a/style.css
+++ b/style.css
@@ -21,6 +21,19 @@ p{
     font-family:"Courier New";
     color: limegreen;
 }
+.verticalnav{
+    font-family:"Courier New";
+    color: limegreen;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 20px;
+    /* I'm trying to get it evenly to the Misc. bar but I have entirely NO idea what I'm doing */
+}
+
+.item-5{
+    border-style:solid;
+}
 
 .resume{
     font-size: 25px;
