--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body{
     text-align: center;
     list-style-type:none;
     color:white;
+    text-decoration: none;
 }
 
 .horizontalnav a:hover{
