--- a/style.css
+++ b/style.css
@@ -53,3 +53,9 @@ p{
     color: limegreen;
     font-family:"Courier New"
 }
+
+.theend{
+    font-family:"Courier New";
+    color: limegreen;
+    font-size: 20px;
+}
